--- a/META.yml
+++ b/META.yml
@@ -1,6 +1,6 @@
 ---
 name: Graphics-Asymptote
-version: 0.0.2
+version: 0.0.3
 author:
   - 'David Mertens <dcmertens.perl+Asymptote@gmail.com>'
 abstract: Perl interface to the Asymptote interpreter
@@ -10,16 +10,17 @@ resources:
 requires:
   Test::More: 0
   Time::HiRes: 0
+  perl: 5.01
   version: 0
 recommends:
   PDL: 0
 provides:
   Graphics::Asymptote:
     file: lib/Graphics/Asymptote.pm
-    version: 0.0.2
+    version: 0.0.3
   PDL::Graphics::Asymptote:
     file: lib/PDL/Graphics/Asymptote.pm
-    version: 0.0.2
+    version: 0.0.3
 generated_by: Module::Build version 0.3
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.2.html
